commit for tuesday

--- a/manual/3.2 MOO 1D scalars.ipynb
+++ b/manual/3.2 MOO 1D scalars.ipynb
@@ -130,6 +130,7 @@
     "display_str = input('Enter setup to display [Q to quit]: ')\n",
     "while display_str.isnumeric():\n",
     "    proposed_layout, true_temps, model_temps, sensor_values = experiment.get_SOO_plotting_arrays(res.X[i])\n",
+    "    print('\\nLoss:', experiment.calc_MOO_loss(res.X[i]))\n",
     "    graph_manager.build_1D_compare(\n",
     "        grid,\n",
     "        proposed_layout,\n",
