--- a/manual/4 experiment analysis.ipynb
+++ b/manual/4 experiment analysis.ipynb
@@ -25,6 +25,67 @@
     "sys.path.append(src_path)\n",
     "print(src_path)"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "description"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from run_me import *\n",
+    "\n",
+    "\n",
+    "# Load any objects necessary\n",
+    "pickle_manager = PickleManager()\n",
+    "graph_manager = GraphManager()\n",
+    "grid = pickle_manager.read_file('simulation', 'temp_line_points.obj')"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "description"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Setup the symmetry\n",
+    "symmetry_manager = SymmetryManager()\n",
+    "symmetry_manager.set_1D_x(0.01)\n",
+    "\n",
+    "field = ScalarField(CSModel, np.array([[-1e10], [1e10]]))"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "description"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "sensor_pos = np.array([[-0.01], [-0.002], [0.006], [0.0012], [0.002]])\n",
+    "sensor_vals = np.array([[10], [20], [30], [40], [50]])\n",
+    "\n",
+    "field.fit_model(sensor_pos, sensor_values)\n"
+   ]
   }
  ],
  "metadata": {
@@ -35,7 +96,7 @@
   },
   "language_info": {
    "name": "python",
-   "version": "3.11.4"
+   "version": "3.10.8"
   },
   "orig_nbformat": 4,
   "vscode": {
