--- a/manual/3.3 MOO 2D vectors.ipynb
+++ b/manual/3.3 MOO 2D vectors.ipynb
@@ -140,6 +140,7 @@
     "display_str = input('Enter setup to display [Q to quit]: ')\n",
     "while display_str.isnumeric():\n",
     "    proposed_layout, true_disps, model_disps, sensor_vals = experiment.get_SOO_plotting_arrays(res.X[i])\n",
+    "    print('\\nLoss:', experiment.calc_MOO_loss(res.X[i]))\n",
     "    mag_true_disps = np.linalg.norm(true_disps, axis=1).reshape(-1, 1)\n",
     "    mag_model_disps = np.linalg.norm(model_disps, axis=1).reshape(-1, 1)\n",
     "    mag_sensor_vals = np.linalg.norm(sensor_vals, axis=1).reshape(-1, 1)\n",
