--- a/manual/1.2 read 2D vector.ipynb
+++ b/manual/1.2 read 2D vector.ipynb
@@ -28,7 +28,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "list"
+    "First we define the objects we will use - the mesh reader (to read the mesh from the FEM file), the pickle manager (to save the mesh data that we want to analyse), and the unfolder (to manage the mesh)."
    ]
   },
   {
@@ -47,8 +47,28 @@
     "# Define the necessary objects\n",
     "reader = MeshReader('monoblock_out.e')\n",
     "pickle_manager = PickleManager()\n",
-    "unfolder = Unfolder()\n",
+    "unfolder = Unfolder()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Next we read the simulation data. Change the sensor_region from `right` to whatever you called the region where sensors can be placed in your FEM file.\n",
     "\n",
+    "We get an array of 3D positions of all the nodes in that region in the mesh. In the monoblock file they all have x=0, but in your file they could all have z=5 or y=3 or whatever. The `compress_2D` function removes the x components so that the array becomes an array of 2D positions. You will have to redefine this function if you are analysing a different face or surface.\n",
+    "\n",
+    "The way the mesh reader works is if you have a vector `disp` then it splits it into 3 scalars `disp_x`, `disp_y`, and `disp_z`. You can find out the names of your vector by looking at the mesh info that is output by the code above (if you use a vector called something other than `disp`). We read the components of the vector and then join them together into a `VectorField`.\n",
+    "\n",
+    "We then save this field."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "# Read the simulation data\n",
     "sensor_region = 'right'\n",
     "pos_3D = reader.read_pos(sensor_region)\n",
@@ -74,7 +94,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "description"
+    "The displacement field is **NOT** uniform in the horizontal direction, but it doesn't change much and we can pretend that it is uniform if we want to get a 1D vector field. The code below considers the 1D strip along the edge of the field."
    ]
   },
   {
@@ -116,7 +136,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.8"
+   "version": "3.11.4"
   },
   "orig_nbformat": 4,
   "vscode": {
