--- a/manual/2.1 SOO 2D scalars.ipynb
+++ b/manual/2.1 SOO 2D scalars.ipynb
@@ -28,7 +28,9 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Description"
+    "We load the stored true fields that we read in chapter 1 of the manual. We also load the graph manager to display the results.\n",
+    "\n",
+    "We get the boundaries of the field, and make sure that sensors can't be placed at the very edge but must be placed at least 2mm away."
    ]
   },
   {
@@ -54,7 +56,9 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "description"
+    "We use the symmetry manager to force any assumptions about planes of symmetry that we might make.\n",
+    "\n",
+    "We then setup the sensor suite, and you can uncomment the code below to find out how to use a MultiSensor (that finds the value at many points - like a DIC or an IR camera)."
    ]
   },
   {
@@ -87,7 +91,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "description"
+    "We define the optimiser. "
    ]
   },
   {
@@ -161,7 +165,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.8"
+   "version": "3.11.4"
   },
   "orig_nbformat": 4,
   "vscode": {
