--- a/manual/1.1 read 2D scalar.ipynb
+++ b/manual/1.1 read 2D scalar.ipynb
@@ -28,7 +28,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "description"
+    "First we define the objects we will use - the mesh reader (to read the mesh from the FEM file), the pickle manager (to save the mesh data that we want to analyse), and the unfolder (to manage the mesh)."
    ]
   },
   {
@@ -47,8 +47,26 @@
     "# Define the necessary objects\n",
     "reader = MeshReader('monoblock_out.e')\n",
     "pickle_manager = PickleManager()\n",
-    "unfolder = Unfolder()\n",
+    "unfolder = Unfolder()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Next we read the simulation data. Change the sensor_region from `right` to whatever you called the region where sensors can be placed in your FEM file.\n",
     "\n",
+    "We get an array of 3D positions of all the nodes in that region in the mesh. In the monoblock file they all have x=0, but in your file they could all have z=5 or y=3 or whatever. The `compress_2D` function removes the x components so that the array becomes an array of 2D positions. You will have to redefine this function if you are analysing a different face or surface.\n",
+    "\n",
+    "We read all of the `temperature` values from the points in the region, and use this to define a `ScalarField`. We can then save this field, and the grid of comparison positions."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "# Read the simulation data\n",
     "sensor_region = 'right'\n",
     "pos_3D = reader.read_pos(sensor_region)\n",
@@ -69,7 +87,9 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "description"
+    "We know that the field is uniform in the horizontal direction so there is no point in analysing a 2D scalar field when we could be using a 1D scalar field, so instead we compress it further into a line.\n",
+    "\n",
+    "We create a new `ScalarField` only this time it is 1D."
    ]
   },
   {
@@ -111,7 +131,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.8"
+   "version": "3.11.4"
   },
   "orig_nbformat": 4,
   "vscode": {
