--- a/manual/2.2 SOO 1D scalars.ipynb
+++ b/manual/2.2 SOO 1D scalars.ipynb
@@ -73,6 +73,10 @@
     "sensor = Thermocouple(temps, voltages, 1)\n",
     "sensors = np.array([sensor]*5)\n",
     "\n",
+    "# def f(x): return np.zeros(x.shape)\n",
+    "# sensor = PointSensor(0, f, 0.1, np.array([[-5e10], [5e10]]), 1)\n",
+    "# sensors = np.array([sensor]*5)\n",
+    "\n",
     "\n",
     "# def f(x): return np.zeros(x.shape)\n",
     "# sensor = MultiSensor(0, f, 0.1, np.array([[-5000], [5000]]), np.linspace(sensor_bounds[0, 0], sensor_bounds[1, 0], 10).reshape(-1, 1))\n",
@@ -157,7 +161,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.8"
+   "version": "3.11.4"
   },
   "orig_nbformat": 4,
   "vscode": {
