--- a/manual/0 overview.ipynb
+++ b/manual/0 overview.ipynb
@@ -18,26 +18,9 @@
     "* `get_` means getter\n",
     "* `set_` means setter\n",
     "* `generate_` means generator for initialisation\n",
-    "* `find_` means return a value involving calculation\n",
-    "* `draw_` means show and close a pyplot figure\n",
+    "* `find_` or `calc_` means return a value involving calculation\n",
     "* `build_` means create a pyplot figure and return it without showing it\n",
     "* `plot_` means plot a python graph on a given axis"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "## What cyclops does\n",
-    "\n",
-    "The user provides a Finite Element Method (FEM) simulation file of the object to be experimented on into the simulation folder (and optionally data about the non-linearity of their sensors into the sensors folder).\n",
-    "\n",
-    "They convert the non-linear sensor data to a csv format as shown in the examples in file '*1 simulation processing.ipynb*'. Note that some of the functions may have to be adapted to your situation if you are not using a monoblock - the unfolder class just squashes the points onto a plane instead of actually unfolding the mesh.\n",
-    "\n",
-    "Then the experiment can be optimised as shown in file '*2 SOO experiment design.ipynb*' and file '*3 MOO experiment design.ipynb*'.\n",
-    "\n",
-    "\n",
-    "![Overview diagram](overview_diagram.jpg \"Title\")"
    ]
   },
   {
