--- a/manual/3.1 MOO 2D scalars.ipynb
+++ b/manual/3.1 MOO 2D scalars.ipynb
@@ -28,7 +28,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "description"
+    "Setting up the objects is the same as before"
    ]
   },
   {
@@ -48,13 +48,6 @@
     "\n",
     "field_bounds = true_temp_field.get_bounds()\n",
     "sensor_bounds = field_bounds+np.array([[1, 1], [-1, -1]])*0.002"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "description"
    ]
   },
   {
@@ -84,7 +77,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "description"
+    "The function names are slightly different."
    ]
   },
   {
@@ -119,7 +112,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "description"
+    "We only plot the graphs for the points you are interested in."
    ]
   },
   {
