--- a/manual/assumptions.ipynb
+++ b/manual/assumptions.ipynb
@@ -14,6 +14,7 @@
     "* The FEM temperature field and ML temperature field can be compared well by calculating the MSE between them at many points.\n",
     "* The heuristic NSGA-II method will produce Pareto-optimal results after a long enough time.\n",
     "* When so many sensors fail that there are not enough working sensors to use the ML algorithm we count the loss as being no bigger than the greatest loss calculated up to that point.\n",
+    "* We assume that the temperature field measured in the experiment will be extermely similar to the FEM temperature field\n",
     "\n",
     "\n",
     "Thermocouples:\n",
