many core results

--- a/manual/0 overview.ipynb
+++ b/manual/0 overview.ipynb
@@ -44,7 +44,9 @@
     "* `predict_values` where an array of positions is input and the predictions for the field values at those points are output.\n",
     "The simulation file provided in step 1 is converted to a field object. This is referred to as the 'True field'. Field objects are also used by the `SensorSuite` to predict the field values from sensor values.\n",
     "\n",
-    "TODO\n",
+    "The `SensorSuite` objects contain sensors and contain use the sensor data they are given to describe a `Field` that they own. They have many different important methods.\n",
+    "\n",
+    "The `Experiment` object runs the experiment optimisation.\n",
     "\n",
     "After all this we analyse the results by plotting graphs with the graph manager."
    ]
