--- a/manual/3.1 MOO 2D scalars.ipynb
+++ b/manual/3.1 MOO 2D scalars.ipynb
@@ -96,8 +96,9 @@
     "experiment.plan_moo(\n",
     "    sensor_suite,\n",
     "    sensor_bounds,\n",
-    "    repetitions=10,\n",
-    "    loss_limit=1000\n",
+    "    repetitions=100,\n",
+    "    loss_limit=1000,\n",
+    "    cores=4\n",
     ")\n",
     "res = experiment.design()\n",
     "\n",
