--- a/manual/3.2 MOO 1D scalars.ipynb
+++ b/manual/3.2 MOO 1D scalars.ipynb
@@ -78,7 +78,8 @@
     "    sensor_suite,\n",
     "    sensor_bounds,\n",
     "    repetitions=10,\n",
-    "    loss_limit=1000\n",
+    "    loss_limit=1000,\n",
+    "    num_cores=4\n",
     ")\n",
     "res = experiment.design()\n",
     "\n",
