first few corrections

--- a/tutorials/0 overview.ipynb
+++ b/tutorials/0 overview.ipynb
@@ -6,7 +6,7 @@
    "source": [
     "# Introduction to cyclops\n",
     "\n",
-    "This manual hopes to give you a brief overview of how cyclops works. After reading this we recommend you go straight to the '*easy_use.ipynb*' file to run some optimisations to familiarise yourself with everything."
+    "\"These tutorials aim to give you an interactive introduction to cyclops.\""
    ]
   },
   {
