--- a/tutorials/0 overview.ipynb
+++ b/tutorials/0 overview.ipynb
@@ -6,21 +6,21 @@
    "source": [
     "# Introduction to cyclops\n",
     "\n",
-    "\"These tutorials aim to give you an interactive introduction to cyclops.\""
+    "These tutorials aim to give you an interactive introduction to cyclops.\n",
+    "\n",
+    "![Overview diagram](overview_diagram.png)"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Function naming\n",
+    "## Function prefixes\n",
     "\n",
-    "* `get_` means getter\n",
-    "* `set_` means setter\n",
     "* `generate_` means generator for initialisation\n",
     "* `find_` or `calc_` means return a value involving calculation\n",
     "* `build_` means create a pyplot figure and return it without showing it\n",
-    "* `plot_` means plot a python graph on a given axis"
+    "* `plot_` function takes an axis as an argument and changes it (for instance by plotting a line on it)"
    ]
   },
   {
@@ -29,10 +29,9 @@
    "source": [
     "## How does cylcops work?\n",
     "\n",
-    "The package was designed on the Sklearn philosopy of initialise, plan, act. You may judge for yourself if I have succeeded.\n",
+    "The package was designed on the Sklearn philosopy of initialise, plan, act (https://scikit-learn.org/stable/developers/develop.html#apis-of-scikit-learn-objects).\n",
     "\n",
-    "\n",
-    "I built a number of machine learning and interpolation regression algorithms in '*regressors.py*'. These have 3 key methods.\n",
+    "Cyclops contains a number of classes for machine learning interpolation and regression, stored in '*regressors.py*'. These have 3 key methods.\n",
     "* `__init__` where they are initialised with the correct hyperparameters.\n",
     "* `fit` where they are fitted to data.\n",
     "* `predict` where they predict an array of output data values given an array of input data values.\n",
@@ -49,6 +48,21 @@
     "The `Experiment` object runs the experiment optimisation.\n",
     "\n",
     "After all this we analyse the results by plotting graphs with the graph manager."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## What do the tutorials cover?\n",
+    "\n",
+    "The section 1 tutorials describe how to read a FEM mesh file into python.\n",
+    "\n",
+    "The section 2 tutorials describe how to perform a single-objective optimisation (SOO) on a field.\n",
+    "\n",
+    "The section 3 tutorials describe how to perform a multi-objective optimisation (MOO) on a field.\n",
+    "\n",
+    "The section 4 tutorial shows how to analyse any historic data (for instance if it's just been copied into the results folder from a supercomputer)."
    ]
   }
  ],
