--- a/tutorials/1.1 read 2D scalar.ipynb
+++ b/tutorials/1.1 read 2D scalar.ipynb
@@ -38,9 +38,9 @@
    "outputs": [],
    "source": [
     "from sim_reader import MeshReader, Unfolder\n",
-    "from fields import ScalarField, VectorField\n",
     "from object_reader import PickleManager\n",
     "from regressors import LModel, CSModel\n",
+    "from fields import ScalarField\n",
     "import numpy as np\n",
     "\n",
     "\n",
