--- a/tutorials/3.1 MOO 2D scalars.ipynb
+++ b/tutorials/3.1 MOO 2D scalars.ipynb
@@ -98,7 +98,7 @@
     "    sensor_bounds,\n",
     "    repetitions=100,\n",
     "    loss_limit=1000,\n",
-    "    cores=4\n",
+    "    num_cores=4\n",
     ")\n",
     "res = experiment.design()\n",
     "\n",
