--- a/tutorials/1.1 read 2D scalar.ipynb
+++ b/tutorials/1.1 read 2D scalar.ipynb
@@ -9,9 +9,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "/home/dharrington/cyclops/src\n"
+     ]
+    }
+   ],
    "source": [
     "%matplotlib inline\n",
     "import sys\n",
@@ -33,9 +41,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "<meshio mesh object>\n",
+      "  Number of points: 87200\n",
+      "  Number of cells:\n",
+      "    hexahedron27: 2016\n",
+      "    hexahedron27: 3360\n",
+      "    hexahedron27: 4704\n",
+      "  Point sets: right, top, left, , centre_x_bottom_y_back_z, centre_x_bottom_y_front_z, left_x_bottom_y_centre_z, right_x_bottom_y_centre_z\n",
+      "  Point data: disp_x, disp_y, disp_z, temperature\n",
+      "  Cell data: vonmises_stress\n"
+     ]
+    }
+   ],
    "source": [
     "from sim_reader import MeshReader, Unfolder\n",
     "from object_reader import PickleManager\n",
@@ -63,7 +87,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -94,7 +118,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
