📝 Make docstrings PEP 257 complaint.
Make docstrings PEP 257 complaint. Also make additional minor style and
readability changes throughout and fix some spelling errors.

--- a/tutorials/0 overview.ipynb
+++ b/tutorials/0 overview.ipynb
@@ -47,7 +47,7 @@
     "\n",
     "The `Experiment` object runs the experiment optimisation.\n",
     "\n",
-    "After all this we analyse the results by plotting graphs with the graph manager."
+    "After all this we analyse the results by plotting plots with the graph manager."
    ]
   },
   {
