--- a/tutorials/2.2 SOO 1D scalars.ipynb
+++ b/tutorials/2.2 SOO 1D scalars.ipynb
@@ -42,7 +42,7 @@
     "\n",
     "# Load any objects necessary\n",
     "pickle_manager = PickleManager()\n",
-    "graph_manager = GraphManager()\n",
+    "graph_manager = PlotManager()\n",
     "true_temp_field = pickle_manager.read_file('simulation', 'temp_line_field.obj')\n",
     "grid = pickle_manager.read_file('simulation', 'temp_line_points.obj')\n",
     "\n",
