--- a/tutorials/3.4 MOO 1D vectors.ipynb
+++ b/tutorials/3.4 MOO 1D vectors.ipynb
@@ -35,7 +35,7 @@
     "\n",
     "# Load any objects necessary\n",
     "pickle_manager = PickleManager()\n",
-    "graph_manager = GraphManager()\n",
+    "graph_manager = PlotManager()\n",
     "true_temp_field = pickle_manager.read_file('simulation', 'disp_line_field.obj')\n",
     "grid = pickle_manager.read_file('simulation', 'disp_line_points.obj')\n",
     "\n",
@@ -101,7 +101,7 @@
     "display_str = input('Enter setup to display [Q to quit]: ')\n",
     "while display_str.isnumeric():\n",
     "    proposed_layout, true_disps, model_disps, sensor_vals = experiment.get_SOO_plotting_arrays(res.X[int(display_str)])\n",
-    "    print('\\nLoss:', experiment.calc_MOO_loss(res.X[int(display_str)]))\n",
+    "    print('\\nLoss:', experiment.calc_moo_loss(res.X[int(display_str)]))\n",
     "    mag_true_disps = np.linalg.norm(true_disps, axis=1).reshape(-1, 1)\n",
     "    mag_model_disps = np.linalg.norm(model_disps, axis=1).reshape(-1, 1)\n",
     "    mag_sensor_vals = np.linalg.norm(sensor_vals, axis=1).reshape(-1, 1)\n",
