--- a/tutorials/2.1 SOO 2D scalars.ipynb
+++ b/tutorials/2.1 SOO 2D scalars.ipynb
@@ -44,7 +44,7 @@
     "\n",
     "# Load any objects necessary\n",
     "pickle_manager = PickleManager()\n",
-    "graph_manager = GraphManager()\n",
+    "graph_manager = PlotManager()\n",
     "true_temp_field = pickle_manager.read_file('simulation', 'temp_plane_field.obj')\n",
     "grid = pickle_manager.read_file('simulation', 'temp_plane_points.obj')\n",
     "\n",
