--- a/tutorials/2.3 SOO 2D vectors.ipynb
+++ b/tutorials/2.3 SOO 2D vectors.ipynb
@@ -42,7 +42,7 @@
     "\n",
     "# Load any objects necessary\n",
     "pickle_manager = PickleManager()\n",
-    "graph_manager = GraphManager()\n",
+    "graph_manager = PlotManager()\n",
     "true_temp_field = pickle_manager.read_file('simulation', 'disp_plane_field.obj')\n",
     "grid = pickle_manager.read_file('simulation', 'disp_plane_points.obj')\n",
     "\n",
