--- a/tutorials/2.4 SOO 1D vectors.ipynb
+++ b/tutorials/2.4 SOO 1D vectors.ipynb
@@ -35,7 +35,7 @@
     "\n",
     "# Load any objects necessary\n",
     "pickle_manager = PickleManager()\n",
-    "graph_manager = GraphManager()\n",
+    "graph_manager = PlotManager()\n",
     "true_temp_field = pickle_manager.read_file('simulation', 'disp_line_field.obj')\n",
     "grid = pickle_manager.read_file('simulation', 'disp_line_points.obj')\n",
     "\n",
