--- a/tutorials/3.1 MOO 2D scalars.ipynb
+++ b/tutorials/3.1 MOO 2D scalars.ipynb
@@ -42,7 +42,7 @@
     "\n",
     "# Load any objects necessary\n",
     "pickle_manager = PickleManager()\n",
-    "graph_manager = GraphManager()\n",
+    "graph_manager = PlotManager()\n",
     "true_temp_field = pickle_manager.read_file('simulation', 'temp_plane_field.obj')\n",
     "grid = pickle_manager.read_file('simulation', 'temp_plane_points.obj')\n",
     "\n",
@@ -131,7 +131,7 @@
     "display_str = input('Enter setup to display [Q to quit]: ')\n",
     "while display_str.isnumeric():\n",
     "    proposed_layout, true_temps, model_temps, sensor_values = experiment.get_SOO_plotting_arrays(res.X[int(display_str)])\n",
-    "    print('\\nLoss:', experiment.calc_MOO_loss(res.X[int(display_str)]))\n",
+    "    print('\\nLoss:', experiment.calc_moo_loss(res.X[int(display_str)]))\n",
     "    graph_manager.build_2D_compare(\n",
     "        grid,\n",
     "        proposed_layout,\n",
