✏️ Rephrase text in tutorial 3.1

--- a/tutorials/3.1 MOO 2D scalars.ipynb
+++ b/tutorials/3.1 MOO 2D scalars.ipynb
@@ -113,7 +113,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "We only plot the graphs for the points you are interested in."
+    "We only plot for the points you are interested in."
    ]
   },
   {
