✏️ Change pickle file extensions to .pickle

--- a/tutorials/1.1 read 2D scalar.ipynb
+++ b/tutorials/1.1 read 2D scalar.ipynb
@@ -9,14 +9,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "/home/dharrington/cyclops/src\n"
+      "/home/luke/code/cyclops/src\n"
      ]
     }
    ],
@@ -41,7 +41,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -69,7 +69,7 @@
     "\n",
     "\n",
     "# Define the necessary objects\n",
-    "reader = MeshReader('monoblock_out.e')\n",
+    "reader = MeshReader('../tutorials/data/monoblock_out.e')\n",
     "pickle_manager = PickleManager()\n",
     "unfolder = Unfolder()"
    ]
@@ -87,7 +87,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -103,8 +103,8 @@
     "temp_field.fit_model(pos_2D, temps)\n",
     "\n",
     "# Save the simulation data\n",
-    "pickle_manager.save_file('simulation', 'temp_plane_field.obj', temp_field)\n",
-    "pickle_manager.save_file('simulation', 'temp_plane_points.obj', grid)"
+    "pickle_manager.save_file('tutorials/data', 'temp_plane_field.pickle', temp_field)\n",
+    "pickle_manager.save_file('tutorials/data', 'temp_plane_points.pickle', grid)"
    ]
   },
   {
@@ -134,8 +134,8 @@
     "new_line_field.fit_model(line_1D, line_temps)\n",
     "\n",
     "# Save the new 1D line field\n",
-    "pickle_manager.save_file('simulation', 'temp_line_field.obj', new_line_field)\n",
-    "pickle_manager.save_file('simulation', 'temp_line_points.obj', line_1D)"
+    "pickle_manager.save_file('tutorials/data', 'temp_line_field.pickle', new_line_field)\n",
+    "pickle_manager.save_file('tutorials/data', 'temp_line_points.pickle', line_1D)"
    ]
   }
  ],
@@ -155,7 +155,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.11.4"
+   "version": "3.10.12"
   },
   "orig_nbformat": 4,
   "vscode": {
