--- a/tutorials/1.2 read 2D vector.ipynb
+++ b/tutorials/1.2 read 2D vector.ipynb
@@ -16,7 +16,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "/home/dharrington/cyclops/src\n"
+      "/home/luke/code/cyclops/src\n"
      ]
     }
    ],
@@ -69,7 +69,7 @@
     "\n",
     "\n",
     "# Define the necessary objects\n",
-    "reader = MeshReader('monoblock_out.e')\n",
+    "reader = MeshReader('../tutorials/data/monoblock_out.e')\n",
     "pickle_manager = PickleManager()\n",
     "unfolder = Unfolder()"
    ]
@@ -110,8 +110,8 @@
     "disp_field.fit_model(pos_2D, disp)\n",
     "\n",
     "# Save the simulation data\n",
-    "pickle_manager.save_file('simulation', 'disp_plane_field.obj', disp_field)\n",
-    "pickle_manager.save_file('simulation', 'disp_plane_points.obj', grid)"
+    "pickle_manager.save_file('tutorials/data', 'disp_plane_field.pickle', disp_field)\n",
+    "pickle_manager.save_file('tutorials/data', 'disp_plane_points.pickle', grid)"
    ]
   },
   {
@@ -139,8 +139,8 @@
     "new_line_field.fit_model(line_1D, line_disps)\n",
     "\n",
     "# Save the new 1D line field\n",
-    "pickle_manager.save_file('simulation', 'disp_line_field.obj', new_line_field)\n",
-    "pickle_manager.save_file('simulation', 'disp_line_points.obj', line_1D)"
+    "pickle_manager.save_file('tutorials/data', 'disp_line_field.pickle', new_line_field)\n",
+    "pickle_manager.save_file('tutorials/data', 'disp_line_points.pickle', line_1D)"
    ]
   }
  ],
@@ -160,7 +160,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.11.4"
+   "version": "3.10.12"
   },
   "orig_nbformat": 4,
   "vscode": {
