--- a/tutorials/4.0 results analysis.ipynb
+++ b/tutorials/4.0 results analysis.ipynb
@@ -9,9 +9,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "/home/luke/code/cyclops/src\n"
+     ]
+    }
+   ],
    "source": [
     "%matplotlib inline\n",
     "import sys\n",
@@ -26,9 +34,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "ename": "ModuleNotFoundError",
+     "evalue": "No module named 'run_me'",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mModuleNotFoundError\u001b[0m                       Traceback (most recent call last)",
+      "\u001b[1;32m/home/luke/code/cyclops/tutorials/4.0 results analysis.ipynb Cell 3\u001b[0m line \u001b[0;36m1\n\u001b[0;32m----> <a href='vscode-notebook-cell:/home/luke/code/cyclops/tutorials/4.0%20results%20analysis.ipynb#W2sZmlsZQ%3D%3D?line=0'>1</a>\u001b[0m \u001b[39mfrom\u001b[39;00m \u001b[39mrun_me\u001b[39;00m \u001b[39mimport\u001b[39;00m \u001b[39m*\u001b[39m\n\u001b[1;32m      <a href='vscode-notebook-cell:/home/luke/code/cyclops/tutorials/4.0%20results%20analysis.ipynb#W2sZmlsZQ%3D%3D?line=3'>4</a>\u001b[0m \u001b[39m# Load any objects necessary\u001b[39;00m\n\u001b[1;32m      <a href='vscode-notebook-cell:/home/luke/code/cyclops/tutorials/4.0%20results%20analysis.ipynb#W2sZmlsZQ%3D%3D?line=4'>5</a>\u001b[0m pickle_manager \u001b[39m=\u001b[39m PickleManager()\n",
+      "\u001b[0;31mModuleNotFoundError\u001b[0m: No module named 'run_me'"
+     ]
+    }
+   ],
    "source": [
     "from run_me import *\n",
     "\n",
@@ -36,9 +56,9 @@
     "# Load any objects necessary\n",
     "pickle_manager = PickleManager()\n",
     "graph_manager = PlotManager()\n",
-    "true_temp_field = pickle_manager.read_file('simulation', 'temp_line_field.obj')\n",
-    "grid = pickle_manager.read_file('simulation', 'temp_line_points.obj')\n",
-    "res = pickle_manager.read_file('results', 'Temp_1D_res_RBF5.obj')\n",
+    "true_temp_field = pickle_manager.read_file('simulation', 'temp_line_field.pickle')\n",
+    "grid = pickle_manager.read_file('simulation', 'temp_line_points.pickle')\n",
+    "res = pickle_manager.read_file('results', 'Temp_1D_res_RBF5.pickle')\n",
     "field_bounds = true_temp_field.get_bounds()\n",
     "sensor_bounds = field_bounds+np.array([[1], [-1]])*0.002\n",
     "\n",
@@ -53,8 +73,8 @@
     "\n",
     "\n",
     "# Setup the sensor suite\n",
-    "temps = pickle_manager.read_file('sensors', 'k-type-T.obj')\n",
-    "voltages = pickle_manager.read_file('sensors', 'k-type-V.obj')\n",
+    "temps = pickle_manager.read_file('sensors', 'k-type-T.pickle')\n",
+    "voltages = pickle_manager.read_file('sensors', 'k-type-V.pickle')\n",
     "sensor = Thermocouple(temps, voltages, 1)\n",
     "sensors = np.array([sensor]*5)\n",
     "\n",
@@ -122,7 +142,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.11.4"
+   "version": "3.10.12"
   },
   "orig_nbformat": 4,
   "vscode": {
