🚚 Move overview figure to hidden folder

--- a/tutorials/0 overview.ipynb
+++ b/tutorials/0 overview.ipynb
@@ -8,7 +8,7 @@
     "\n",
     "These tutorials aim to give you an interactive introduction to cyclops.\n",
     "\n",
-    "![Overview diagram](overview_diagram.png)"
+    "![Overview diagram](.figures/01_overview.png)"
    ]
   },
   {
