📝 Update tutorials to use packaged cyclops

--- a/tutorials/1.1 read 2D scalar.ipynb
+++ b/tutorials/1.1 read 2D scalar.ipynb
@@ -8,31 +8,6 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": 2,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "/home/luke/code/cyclops/src\n"
-     ]
-    }
-   ],
-   "source": [
-    "%matplotlib inline\n",
-    "import sys\n",
-    "import os\n",
-    "\n",
-    "# Sort the paths out to run from this file\n",
-    "parent_path = os.path.dirname(os.getcwd())\n",
-    "src_path = os.path.join(os.path.sep,parent_path, 'src')\n",
-    "sys.path.append(src_path)\n",
-    "print(src_path)"
-   ]
-  },
-  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -41,7 +16,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [
     {
@@ -61,15 +36,15 @@
     }
    ],
    "source": [
-    "from sim_reader import MeshReader, Unfolder\n",
-    "from object_reader import PickleManager\n",
-    "from regressors import LModel, CSModel\n",
-    "from fields import ScalarField\n",
     "import numpy as np\n",
     "\n",
+    "from cyclops.sim_reader import MeshReader, Unfolder\n",
+    "from cyclops.object_reader import PickleManager\n",
+    "from cyclops.regressors import LModel, CSModel\n",
+    "from cyclops.fields import ScalarField\n",
     "\n",
     "# Define the necessary objects\n",
-    "reader = MeshReader('../tutorials/data/monoblock_out.e')\n",
+    "reader = MeshReader('data/monoblock_out.e')\n",
     "pickle_manager = PickleManager()\n",
     "unfolder = Unfolder()"
    ]
@@ -87,7 +62,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -103,8 +78,8 @@
     "temp_field.fit_model(pos_2D, temps)\n",
     "\n",
     "# Save the simulation data\n",
-    "pickle_manager.save_file('tutorials/data', 'temp_plane_field.pickle', temp_field)\n",
-    "pickle_manager.save_file('tutorials/data', 'temp_plane_points.pickle', grid)"
+    "pickle_manager.save_file('results/temp_plane_field.pickle', temp_field)\n",
+    "pickle_manager.save_file('results/temp_plane_points.pickle', grid)"
    ]
   },
   {
@@ -118,7 +93,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -134,8 +109,8 @@
     "new_line_field.fit_model(line_1D, line_temps)\n",
     "\n",
     "# Save the new 1D line field\n",
-    "pickle_manager.save_file('tutorials/data', 'temp_line_field.pickle', new_line_field)\n",
-    "pickle_manager.save_file('tutorials/data', 'temp_line_points.pickle', line_1D)"
+    "pickle_manager.save_file('results/temp_line_field.pickle', new_line_field)\n",
+    "pickle_manager.save_file('results/temp_line_points.pickle', line_1D)"
    ]
   }
  ],
