--- a/tutorials/1.2 read 2D vector.ipynb
+++ b/tutorials/1.2 read 2D vector.ipynb
@@ -8,31 +8,6 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": 1,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "/home/luke/code/cyclops/src\n"
-     ]
-    }
-   ],
-   "source": [
-    "%matplotlib inline\n",
-    "import sys\n",
-    "import os\n",
-    "\n",
-    "# Sort the paths out to run from this file\n",
-    "parent_path = os.path.dirname(os.getcwd())\n",
-    "src_path = os.path.join(os.path.sep,parent_path, 'src')\n",
-    "sys.path.append(src_path)\n",
-    "print(src_path)"
-   ]
-  },
-  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -41,7 +16,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -61,15 +36,15 @@
     }
    ],
    "source": [
-    "from sim_reader import MeshReader, Unfolder\n",
-    "from object_reader import PickleManager\n",
-    "from regressors import LModel, CSModel\n",
-    "from fields import VectorField\n",
     "import numpy as np\n",
     "\n",
+    "from cyclops.sim_reader import MeshReader, Unfolder\n",
+    "from cyclops.object_reader import PickleManager\n",
+    "from cyclops.regressors import LModel, CSModel\n",
+    "from cyclops.fields import VectorField\n",
     "\n",
     "# Define the necessary objects\n",
-    "reader = MeshReader('../tutorials/data/monoblock_out.e')\n",
+    "reader = MeshReader('data/monoblock_out.e')\n",
     "pickle_manager = PickleManager()\n",
     "unfolder = Unfolder()"
    ]
@@ -89,7 +64,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -110,8 +85,8 @@
     "disp_field.fit_model(pos_2D, disp)\n",
     "\n",
     "# Save the simulation data\n",
-    "pickle_manager.save_file('tutorials/data', 'disp_plane_field.pickle', disp_field)\n",
-    "pickle_manager.save_file('tutorials/data', 'disp_plane_points.pickle', grid)"
+    "pickle_manager.save_file('results/disp_plane_field.pickle', disp_field)\n",
+    "pickle_manager.save_file('results/disp_plane_points.pickle', grid)"
    ]
   },
   {
@@ -123,7 +98,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -139,8 +114,8 @@
     "new_line_field.fit_model(line_1D, line_disps)\n",
     "\n",
     "# Save the new 1D line field\n",
-    "pickle_manager.save_file('tutorials/data', 'disp_line_field.pickle', new_line_field)\n",
-    "pickle_manager.save_file('tutorials/data', 'disp_line_points.pickle', line_1D)"
+    "pickle_manager.save_file('results/disp_line_field.pickle', new_line_field)\n",
+    "pickle_manager.save_file('results/disp_line_points.pickle', line_1D)"
    ]
   }
  ],
