--- a/tutorials/4.0 results analysis.ipynb
+++ b/tutorials/4.0 results analysis.ipynb
@@ -13,55 +13,37 @@
    "metadata": {},
    "outputs": [
     {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "/home/luke/code/cyclops/src\n"
-     ]
-    }
-   ],
-   "source": [
-    "%matplotlib inline\n",
-    "import sys\n",
-    "import os\n",
-    "\n",
-    "# Sort the paths out to run from this file\n",
-    "parent_path = os.path.dirname(os.getcwd())\n",
-    "src_path = os.path.join(os.path.sep,parent_path, 'src')\n",
-    "sys.path.append(src_path)\n",
-    "print(src_path)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 2,
-   "metadata": {},
-   "outputs": [
-    {
-     "ename": "ModuleNotFoundError",
-     "evalue": "No module named 'run_me'",
+     "ename": "FileNotFoundError",
+     "evalue": "[Errno 2] No such file or directory: 'results/temp_1D_res_RBF5.pickle'",
      "output_type": "error",
      "traceback": [
       "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mModuleNotFoundError\u001b[0m                       Traceback (most recent call last)",
-      "\u001b[1;32m/home/luke/code/cyclops/tutorials/4.0 results analysis.ipynb Cell 3\u001b[0m line \u001b[0;36m1\n\u001b[0;32m----> <a href='vscode-notebook-cell:/home/luke/code/cyclops/tutorials/4.0%20results%20analysis.ipynb#W2sZmlsZQ%3D%3D?line=0'>1</a>\u001b[0m \u001b[39mfrom\u001b[39;00m \u001b[39mrun_me\u001b[39;00m \u001b[39mimport\u001b[39;00m \u001b[39m*\u001b[39m\n\u001b[1;32m      <a href='vscode-notebook-cell:/home/luke/code/cyclops/tutorials/4.0%20results%20analysis.ipynb#W2sZmlsZQ%3D%3D?line=3'>4</a>\u001b[0m \u001b[39m# Load any objects necessary\u001b[39;00m\n\u001b[1;32m      <a href='vscode-notebook-cell:/home/luke/code/cyclops/tutorials/4.0%20results%20analysis.ipynb#W2sZmlsZQ%3D%3D?line=4'>5</a>\u001b[0m pickle_manager \u001b[39m=\u001b[39m PickleManager()\n",
-      "\u001b[0;31mModuleNotFoundError\u001b[0m: No module named 'run_me'"
+      "\u001b[0;31mFileNotFoundError\u001b[0m                         Traceback (most recent call last)",
+      "\u001b[1;32m/home/luke/code/cyclops/tutorials/4.0 results analysis.ipynb Cell 2\u001b[0m line \u001b[0;36m1\n\u001b[1;32m     <a href='vscode-notebook-cell:/home/luke/code/cyclops/tutorials/4.0%20results%20analysis.ipynb#W2sZmlsZQ%3D%3D?line=13'>14</a>\u001b[0m true_temp_field \u001b[39m=\u001b[39m pickle_manager\u001b[39m.\u001b[39mread_file(\u001b[39m'\u001b[39m\u001b[39mresults/temp_line_field.pickle\u001b[39m\u001b[39m'\u001b[39m)\n\u001b[1;32m     <a href='vscode-notebook-cell:/home/luke/code/cyclops/tutorials/4.0%20results%20analysis.ipynb#W2sZmlsZQ%3D%3D?line=14'>15</a>\u001b[0m grid \u001b[39m=\u001b[39m pickle_manager\u001b[39m.\u001b[39mread_file(\u001b[39m'\u001b[39m\u001b[39mresults/temp_line_points.pickle\u001b[39m\u001b[39m'\u001b[39m)\n\u001b[0;32m---> <a href='vscode-notebook-cell:/home/luke/code/cyclops/tutorials/4.0%20results%20analysis.ipynb#W2sZmlsZQ%3D%3D?line=15'>16</a>\u001b[0m res \u001b[39m=\u001b[39m pickle_manager\u001b[39m.\u001b[39;49mread_file(\u001b[39m'\u001b[39;49m\u001b[39mresults/temp_1D_res_RBF5.pickle\u001b[39;49m\u001b[39m'\u001b[39;49m)\n\u001b[1;32m     <a href='vscode-notebook-cell:/home/luke/code/cyclops/tutorials/4.0%20results%20analysis.ipynb#W2sZmlsZQ%3D%3D?line=16'>17</a>\u001b[0m field_bounds \u001b[39m=\u001b[39m true_temp_field\u001b[39m.\u001b[39mget_bounds()\n\u001b[1;32m     <a href='vscode-notebook-cell:/home/luke/code/cyclops/tutorials/4.0%20results%20analysis.ipynb#W2sZmlsZQ%3D%3D?line=17'>18</a>\u001b[0m sensor_bounds \u001b[39m=\u001b[39m field_bounds\u001b[39m+\u001b[39mnp\u001b[39m.\u001b[39marray([[\u001b[39m1\u001b[39m], [\u001b[39m-\u001b[39m\u001b[39m1\u001b[39m]])\u001b[39m*\u001b[39m\u001b[39m0.002\u001b[39m\n",
+      "File \u001b[0;32m~/code/cyclops/src/cyclops/object_reader.py:39\u001b[0m, in \u001b[0;36mPickleManager.read_file\u001b[0;34m(self, file_path)\u001b[0m\n\u001b[1;32m     30\u001b[0m \u001b[39m\u001b[39m\u001b[39m\"\"\"Read an object instance from a .pickle file and return it.\u001b[39;00m\n\u001b[1;32m     31\u001b[0m \n\u001b[1;32m     32\u001b[0m \u001b[39mArgs:\u001b[39;00m\n\u001b[0;32m   (...)\u001b[0m\n\u001b[1;32m     36\u001b[0m \u001b[39m    object_to_return (object): the object instance loaded from file.\u001b[39;00m\n\u001b[1;32m     37\u001b[0m \u001b[39m\"\"\"\u001b[39;00m\n\u001b[1;32m     38\u001b[0m file_path \u001b[39m=\u001b[39m pathlib\u001b[39m.\u001b[39mPath(file_path)\n\u001b[0;32m---> 39\u001b[0m \u001b[39mwith\u001b[39;00m \u001b[39mopen\u001b[39;49m(file_path, \u001b[39m\"\u001b[39;49m\u001b[39mrb\u001b[39;49m\u001b[39m\"\u001b[39;49m) \u001b[39mas\u001b[39;00m file:\n\u001b[1;32m     40\u001b[0m     object_to_return \u001b[39m=\u001b[39m pickle\u001b[39m.\u001b[39mload(file)\n\u001b[1;32m     41\u001b[0m \u001b[39mreturn\u001b[39;00m object_to_return\n",
+      "\u001b[0;31mFileNotFoundError\u001b[0m: [Errno 2] No such file or directory: 'results/temp_1D_res_RBF5.pickle'"
      ]
     }
    ],
    "source": [
-    "from run_me import *\n",
-    "\n",
+    "import numpy as np\n",
+    "from cyclops.experiment import Experiment\n",
+    "from cyclops.fields import ScalarField\n",
+    "from cyclops.object_reader import PickleManager\n",
+    "from cyclops.optimisers import NSGA2Optimiser\n",
+    "from cyclops.plotting import PlotManager\n",
+    "from cyclops.regressors import RBFModel\n",
+    "from cyclops.sensor_suite import SensorSuite\n",
+    "from cyclops.sensors import Thermocouple\n",
     "\n",
     "# Load any objects necessary\n",
     "pickle_manager = PickleManager()\n",
     "graph_manager = PlotManager()\n",
-    "true_temp_field = pickle_manager.read_file('simulation', 'temp_line_field.pickle')\n",
-    "grid = pickle_manager.read_file('simulation', 'temp_line_points.pickle')\n",
-    "res = pickle_manager.read_file('results', 'Temp_1D_res_RBF5.pickle')\n",
+    "true_temp_field = pickle_manager.read_file('results/temp_line_field.pickle')\n",
+    "grid = pickle_manager.read_file('results/temp_line_points.pickle')\n",
+    "res = pickle_manager.read_file('results/temp_1D_res_RBF5.pickle')\n",
     "field_bounds = true_temp_field.get_bounds()\n",
     "sensor_bounds = field_bounds+np.array([[1], [-1]])*0.002\n",
-    "\n",
     "\n",
     "# Setup the experiment\n",
     "optimiser = NSGA2Optimiser('00:00:10')\n",
@@ -71,10 +53,9 @@
     "    optimiser\n",
     ")\n",
     "\n",
-    "\n",
     "# Setup the sensor suite\n",
-    "temps = pickle_manager.read_file('sensors', 'k-type-T.pickle')\n",
-    "voltages = pickle_manager.read_file('sensors', 'k-type-V.pickle')\n",
+    "temps = pickle_manager.read_file('../sensors/k-type-T.pickle')\n",
+    "voltages = pickle_manager.read_file('../sensors/k-type-V.pickle')\n",
     "sensor = Thermocouple(temps, voltages, 1)\n",
     "sensors = np.array([sensor]*5)\n",
     "\n",
@@ -102,13 +83,24 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "ename": "NameError",
+     "evalue": "name 'res' is not defined",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mNameError\u001b[0m                                 Traceback (most recent call last)",
+      "\u001b[1;32m/home/luke/code/cyclops/tutorials/4.0 results analysis.ipynb Cell 4\u001b[0m line \u001b[0;36m1\n\u001b[0;32m----> <a href='vscode-notebook-cell:/home/luke/code/cyclops/tutorials/4.0%20results%20analysis.ipynb#W4sZmlsZQ%3D%3D?line=0'>1</a>\u001b[0m graph_manager\u001b[39m.\u001b[39mbuild_pareto(res\u001b[39m.\u001b[39mF)\n\u001b[1;32m      <a href='vscode-notebook-cell:/home/luke/code/cyclops/tutorials/4.0%20results%20analysis.ipynb#W4sZmlsZQ%3D%3D?line=1'>2</a>\u001b[0m graph_manager\u001b[39m.\u001b[39mdraw()\n\u001b[1;32m      <a href='vscode-notebook-cell:/home/luke/code/cyclops/tutorials/4.0%20results%20analysis.ipynb#W4sZmlsZQ%3D%3D?line=3'>4</a>\u001b[0m graph_manager\u001b[39m.\u001b[39mbuild_pareto(res\u001b[39m.\u001b[39mF)\n",
+      "\u001b[0;31mNameError\u001b[0m: name 'res' is not defined"
+     ]
+    }
+   ],
    "source": [
     "graph_manager.build_pareto(res.F)\n",
     "graph_manager.draw()\n",
     "\n",
     "graph_manager.build_pareto(res.F)\n",
-    "graph_manager.save_png('results', 'Pareto_RBF.png')\n",
     "\n",
     "display_str = input('Enter setup to display [Q to quit]: ')\n",
     "while display_str.isnumeric():\n",
